# email-env-openenv

./: Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
data/: emails.json
env/: environment.py  graders.py  models.py  tasks.py
server/: app.py
